MOD: Factored in public package info
Factored in public package info (currently, for NPM),
added some useful abstractions and organized code
around possibility to perform analysis both on
PyPi and NPM. Implemented NPM only for now.

Moved AST code changes analysis into code subfolder.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,12 @@ classifiers = [
 ]
 license = {text = "GPLv3", file = "LICENSE"}
 dependencies = [
+  "ipdb",
   "typer",
   "rich",
+  "termcolor",
+  "requests",
+  "semver",
   "tree-sitter",
   "tree-sitter-javascript",
   "tree-sitter-typescript"
@@ -28,7 +32,10 @@ test = [
     "pytest",  # testing
     "ruff",  # linting
     "ty", # checking types
-    "ipdb", # debugging
+    "ipdb", # debugging,
+    "black",
+    "pylint",
+    "pylint-google-style",
 ]
 
 [project.urls]
