--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ rich==14.1.0
 tree-sitter==0.25.2
 tree-sitter-javascript==0.25.0
 tree-sitter-typescript==0.23.2
+semver==3.0.4
+pylint==3.3.8
+black==25.9.0
+termcolor==3.1.0
