MOD: Added settings to the tool and some more github logic
Added settings to set github_token globally when needed
and some additional logic about pulling versions caused
mismatch between what was released and what was
published. Example is i18n-node, where
there is 0.15.0 release and the next one is 0.15.2, while
NPM contains 0.15.1. We would need to resolve divergence
somehow later.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ license = {text = "GPLv3", file = "LICENSE"}
 dependencies = [
   "ipdb",
   "typer",
+  "pydantic",
   "rich",
   "termcolor",
   "requests",
