MOD: Chores related to models design
Initial implementaion of the interaction (MVP) is
working but barely maintainable. Especially
potential to add PyPi. Refactored to something
similar to Service Layer architecture for now,
at least models are in the dedicated space and
API clients interaction now have own interface
to follow.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,9 @@
   // 6. Pylint Configuration: Use the custom pylintrc file
   "python.linting.pylintArgs": [
       "--rcfile=${workspaceFolder}/pylintrc"
-  ]
+  ],
+  "files.exclude": {
+    "**/__pycache__": true,
+    "**/*.egg-info": true
+  }
 }
