--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
   "semver",
   "tree-sitter",
   "tree-sitter-javascript",
-  "tree-sitter-typescript"
+  "tree-sitter-typescript",
+  "pandas"
 ]
 requires-python = ">= 3.10"
 
