MOD: Added Jinja-rendered HTML report design
- Refactored HTML design for the Dependencies
  Lag report, added some fonts and meaningful header.
- Added Time Lag highlight (currently, red font) for
  dependencies over the specified threshold.
- Added `output_destination` setting, but not
  impelmented yet the function. The purpose would
  be to store HTML report to the specified location.
- Renamed config.py to settings.py to align with the
  classname/easier to remmeber during development to which
  file switch for the configuration.
- Moved all help messages to messages.py to cleanup
  cli.py a bit.

Next steps:
 - Finish HTML report with the project info and
   short aggregated summary on the top.
 - Add intelligent versions lag description
   to the table, for example "2 patch, 2 minor, 1 major"
 - Add highlight to the table rows for the lagging
   dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
   "termcolor",
   "requests",
   "semver",
+  "jinja2",
   "tree-sitter",
   "tree-sitter-javascript",
   "tree-sitter-typescript",
