MOD: Major refactoring/rebranding from udpate_burden to ossiq
Python module renamed to ossiq for simplicity and
package/project renamed to ossiq-cli for nicer
naming and clarity. Requirements migrated to UV package
manager, so now there's uv.lock file.

Next Step:
 - add CVE repository from osv.dev

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,12 +14,11 @@
   ],
 
   // 5. Linting: Enable Pylint
-  "python.linting.enabled": true,
-  "python.linting.lintOnSave": true,
-  "python.linting.pylintEnabled": true,
+  "pylint.enabled": true,
+  "pylint.lintOnChange": true,
 
   // 6. Pylint Configuration: Use the custom pylintrc file
-  "python.linting.pylintArgs": [
+  "pylint.pylintArgs": [
       "--rcfile=${workspaceFolder}/pylintrc"
   ],
   "files.exclude": {
