--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "update-burden"
+name = "ossiq-cli"
 version = "0.1.0"
 description = "Utility to forecast risks associated with currently installed packages updates"
 readme = "README.md"
@@ -12,42 +12,43 @@ maintainers = [
 classifiers = [
     "OSI Approved :: GNU General Public License v3 (GPLv3)"
 ]
-license = {text = "GPLv3", file = "LICENSE"}
-dependencies = [
-  "ipdb",
-  "typer",
-  "pydantic",
-  "rich",
-  "termcolor",
-  "requests",
-  "semver",
-  "jinja2",
-  "tree-sitter",
-  "tree-sitter-javascript",
-  "tree-sitter-typescript",
-  "pandas"
+license = {file = "LICENSE"}
+dependencies = [ # specify that newer patch or minor versions allowed
+  "ipdb~=0.13.13",
+  "typer~=0.20.0",
+  "pydantic~=2.12.4",
+  "rich~=14.2.0",
+  "termcolor~=3.2.0",
+  "requests~=2.32.5",
+  "semver~=3.0.4",
+  "jinja2~=3.1.6",
+  "tree-sitter~=0.25.2",
+  "tree-sitter-javascript~=0.25.0",
+  "tree-sitter-typescript~=0.23.2",
+  "pandas~=2.3.3",
+  "hatch>=1.15.1",
 ]
 requires-python = ">= 3.10"
 
 [project.optional-dependencies]
 test = [
-    "coverage",  # testing
-    "pytest",  # testing
-    "ruff",  # linting
-    "ty", # checking types
-    "ipdb", # debugging,
-    "black",
-    "pylint",
-    "pylint-google-style",
+    "coverage~=7.12.0",  # testing
+    "pytest~=9.0.1",  # testing
+    "ruff~=0.14.6",  # linting
+    "ty~=0.0.1a27", # checking types
+    "ipdb~=0.13.13", # debugging,
+    "black~=25.11.0",
+    "pylint~=4.0.3"
 ]
 
 [project.urls]
-bugs = "https://github.com/mklymyshyn/update_burden/issues"
-changelog = "https://github.com/mklymyshyn/update_burden/blob/master/changelog.md"
-homepage = "https://github.com/mklymyshyn/update_burden"
+bugs = "https://github.com/mklymyshyn/ossiq-cli/issues"
+changelog = "httpshttps://github.com/mklymyshyn/ossiq/blob/master/changelog.md"
+homepage = "https://github.com/mklymyshyn/ossiq-cli"
+repository = "https://github.com/mklymyshyn/ossiq-cli.git"
 
 [project.scripts]
-update-burden = "update_burden.cli:app"
+ossiq-cli = "ossiq.cli:app"
 
 [tool.ty]
 # All rules are enabled as "error" by default; no need to specify unless overriding.
