ADD: Added CVE from OSV.dev and integrated into Console report
Added CVE database and adapter for osv.dev, so that
quantity of CVEs could be displayed in the report. No
transitive dependencies reporting yet.

Next Steps:
 - Make sure theme is good in Light mode
 - Integrate CVEs into HTML report
 - Solidify CSV export, currently prototype implementation
 - Start adding tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   // 1. Python Interpreter: IMPORTANT - Replace "venv/bin/python" with your actual path
-  "python.defaultInterpreterPath": "../venv/bin/python",
+  "python.defaultInterpreterPath": "./venv/bin/python",
 
   // 2. Formatting: Use Black as the primary formatter
   "editor.defaultFormatter": "ms-python.black-formatter",
