--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dependencies = [ # specify that newer patch or minor versions allowed
   "mkdocs>=1.6.1",
   "mkdocs-material>=9.5.50",
   "mkdocstrings>=0.25.2",
+  "mkdocs-nav-weight>=0.3.0",
 ]
 requires-python = ">= 3.10"
 
