--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,9 @@ name: Test Python application
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "master" ]
+    branches: [ "main" ]
 
 permissions:
   contents: read
@@ -23,24 +23,28 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+    - uses: actions/checkout@v6
+    - name: Install uv with Python ${{ matrix.python-version }}
+      uses: astral-sh/setup-uv@v7
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements_dev.txt
+
+    - name: Install the project for ${{ matrix.python-version }}
+      run: uv sync --locked --all-extras --dev
+
+    - uses: extractions/setup-just@v3
+      with:
+        github-token: ${{ secrets.MY_GITHUB_TOKEN }}
+
     - name: Lint with ruff
       run: |
-        # stop the build if there are Python syntax errors or undefined names
-        ruff check --select=E9,F63,F7,F82
-        # exit-zero treats all errors as warnings
-        ruff check --exit-zero --statistics
-    - name: Install project
+        uv run just lint        
+    - name: Run Tests
       run: |
-        pip install .
-    - name: Run tests
+        uv run just test
+    - name: Build Project
       run: |
-        pytest
+        uv run just build
+    - name: Cleanup
+      run: |
+        uv run just clean
