MOD: Modified github action to publish github pages
 - fixed material-mkdocs to align with the latest version
 - added recommended docs github action to publish docs
 - fixed mkdocs `info` plugin to not break mkdocs build

GH-1

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: ossiq
 site_description: "Utility to forecast risks associated with currently installed packages updates"
 site_author: Maksym Klymyshyn
 site_dir: site
-site_url: https://ossiq.dev
+site_url: https://ossiq.github.io
 
 repo_name: ossiq/ossiq
 repo_url: https://github.com/ossiq/ossiq
@@ -10,7 +10,9 @@ edit_uri: blob/main/docs/
 
 plugins:
   - mkdocs-nav-weight
-  - info
+  - info:
+      enabled: false
+      enabled_on_serve: true
 
 markdown_extensions:
   - pymdownx.highlight:
