--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,6 @@ classifiers = [
 keywords = ["techdebt", "tech debt", "maintenance", "toc", "engineering"]
 
 dependencies = [ # specify that newer patch or minor versions allowed
-  "ipdb~=0.13.13",
   "typer~=0.20.0",
   "pydantic~=2.12.4",
   "rich~=14.2.0",
@@ -48,15 +47,7 @@ dependencies = [ # specify that newer patch or minor versions allowed
   "requests~=2.32.5",
   "semver~=3.0.4",
   "jinja2~=3.1.6",
-  "tree-sitter~=0.25.2",
-  "tree-sitter-javascript~=0.25.0",
-  "tree-sitter-typescript~=0.23.2",
-  "pandas~=2.3.3",
   "hatch>=1.15.1",
-  "mkdocs>=1.6.1",
-  "mkdocs-material>=9.7.1",
-  "mkdocstrings>=0.25.2",
-  "mkdocs-nav-weight>=0.3.0",
 ]
 requires-python = ">= 3.10"
 
@@ -71,9 +62,10 @@ test = [
     "pylint~=4.0.3"
 ]
 docs = [
-    "mkdocs~=1.6.0",
-    "mkdocs-material",
-    "mkdocstrings",
+    "mkdocs~=1.6.1",
+    "mkdocstrings~=1.0.0",
+    "mkdocs-material~=9.7.1",    
+    "mkdocs-nav-weight~=0.3.0"
 ]
 
 [project.license]
