ADD: Added common-expression-language and pandas back to dependencies
Pandas needed to correctl parse human-readable data (potentially,
could be refactored out later).

Added common-expression-language (CEL) to constraint lockfile
schemas with human-readable rules, like:
  `"version == 1 && revision >= 3"`
So that there'll be some flexibility to cover more than
one version per handler for the future.

GH-4

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,6 @@ classifiers = [
     "Operating System :: OS Independent",
 
     # Specific Python Versions (Adjust these to what you actually support)
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3 :: Only",
@@ -48,8 +45,10 @@ dependencies = [ # specify that newer patch or minor versions allowed
   "semver~=3.0.4",
   "jinja2~=3.1.6",
   "hatch>=1.15.1",
+  "common-expression-language>=0.5.3",
+  "pandas>=2.3.3",
 ]
-requires-python = ">= 3.10"
+requires-python = ">= 3.11"
 
 [project.optional-dependencies]
 test = [
