MOD: Removed black and added qa-integration command
Removed black since it conflicting with ruff. Ruff
is the way to format code for now for the project.

Added `qa-integration` command to justfile, so that
commands could be run against testdata/* sample projects.

GH-4

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,16 +3,16 @@
   "python.defaultInterpreterPath": "./venv/bin/python",
 
   // 2. Formatting: Use Black as the primary formatter
-  "editor.defaultFormatter": "ms-python.black-formatter",
-
-  // 3. Enable formatting on save (highly recommended)
-  "editor.formatOnSave": true,
-
-  // 4. Black Configuration: Set line length to 100 (Google standard)
-  "black-formatter.args": [
-      "--line-length=100"
-  ],
-
+  "[python]": {
+    // Change this from "ms-python.black-formatter"
+    "editor.defaultFormatter": "charliermarsh.ruff",
+    "editor.formatOnSave": true,
+    "editor.codeActionsOnSave": {
+      "source.fixAll.ruff": "explicit",
+      "source.organizeImports.ruff": "explicit"
+    }
+  },
+    
   // 5. Linting: Enable Pylint
   "pylint.enabled": true,
   "pylint.lintOnChange": true,
