--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,6 @@ test = [
     "ruff~=0.14.6",  # linting
     "ty~=0.0.1a27", # checking types
     "ipdb~=0.13.13", # debugging,
-    "black~=25.11.0",
     "pylint~=4.0.3"
 ]
 docs = [
@@ -89,6 +88,13 @@ ossiq-cli = "ossiq.cli:app"
 
 [tool.ruff]
 line-length = 120
+
+[tool.ruff.format]
+# These settings ensure Ruff behaves like Black (but with your 120 limit)
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false  # Respects trailing commas to keep multi-line formatting
+line-ending = "auto"
 
 [tool.ruff.lint]
 select = [
