--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ classifiers = [
 ]
 keywords = ["techdebt", "tech debt", "maintenance", "toc", "engineering"]
 
+requires-python = ">= 3.11"
+
 dependencies = [ # specify that newer patch or minor versions allowed
   "typer~=0.20.0",
   "pydantic~=2.12.4",
@@ -49,16 +51,16 @@ dependencies = [ # specify that newer patch or minor versions allowed
   "pandas>=2.3.3",
   "packaging>=25.0",
 ]
-requires-python = ">= 3.11"
+
 
 [project.optional-dependencies]
-test = [
-    "coverage~=7.12.0",  # testing
-    "pytest~=9.0.1",  # testing
-    "ruff~=0.14.6",  # linting
-    "ty~=0.0.1a27", # checking types
+dev = [
+    "coverage~=7.13.1",  # testing
+    "pytest~=9.0.2",  # testing
+    "ruff~=0.14.10",  # linting
+    "ty~=0.0.8", # checking types
     "ipdb~=0.13.13", # debugging,
-    "pylint~=4.0.3"
+    "pylint~=4.0.4"
 ]
 docs = [
     "mkdocs~=1.6.1",
