--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # From https://github.com/github/gitignore/blob/main/Python.gitignore 2025-07-30
-
-overview_report.html
+ossiq_scan_report_*.html
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
