--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [ # specify that newer patch or minor versions allowed
   "common-expression-language>=0.5.3",
   "pandas>=2.3.3",
   "packaging>=25.0",
+  "jsonschema~=4.23.0",
 ]
 
 
