chore: fixed release.yml and added license to pyproject.toml
GH-11

Signed-off-by: Maksym Klymyshyn <klymyshyn@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ jobs:
   publish:
     environment:
       name: release
+      url: https://pypi.org/project/ossiq
     runs-on: ubuntu-latest
     permissions:
       # Use OIDC for Trusted Publishing
