feat: initial Dockerfile implementation with documentation
Added initial Dockerfile implementation
and tested with colored and black-and-white output.
b/c of Rust dependency in common-expression-language
had to build two-phase (build, prod) Dockerfile.

GH-6

Signed-off-by: Maksym Klymyshyn <klymyshyn@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ classifiers = [
     # Specific Python Versions (Adjust these to what you actually support)
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "Programming Language :: Python :: 3 :: Only",
 ]
 keywords = ["techdebt", "tech debt", "maintenance", "toc", "engineering"]
