--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint.
 # For more information see: https://docs.github.com/en/actions/use-cases-and-examples/building-and-testing/building-and-testing-python
 
-name: Generate Documentation and Deploy to GitHub Pages
+name: Documentation
 
 
 on:
