ci: added quality gate dogfood workflow
Created quality gate based on own tutorial
to threshould versions lag and fail on CVEs.

GH-5

Signed-off-by: Maksym Klymyshyn <klymyshyn@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,10 @@ markdown_extensions:
 
 theme:
   name: material
+  extra:
+    analytics:
+      provider: google
+      property: G-6GG5NRKT0J
   custom_dir: docs/overrides
   palette: 
     - scheme: default
