feat: added frontend builder based on vue.js
Added VueJS application and build system to
build a self-contained SPA for HTML reports.
The ultimate goal is to generate SPA during
python package normal build process (facilitated
by Hatch) and distribute only built version.

Since there's attestation process happening,
distributed SPA would have same security
attributes as python package itself.

To provide best UX for the HTML report,
especially with introduction of Transitive
Dependencies, the tooling should have
enough capabilities to sustain development.

GH-18

Signed-off-by: Maksym Klymyshyn <klymyshyn@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,10 +91,22 @@ include = [
   "src/ossiq/**/*.html",
   "src/ossiq/**/*.json",
   "src/ossiq/**/*.csv",
+  "frontend/**",
+  "hatch_build.py",
+]
+exclude = [
+  "frontend/node_modules/**",
+  "frontend/dist/**",
+]
+artifacts = [
+  "src/ossiq/ui/html_templates/spa_app.html",
 ]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/ossiq"]
+
+[tool.hatch.build.targets.wheel.hooks.custom]
+path = "hatch_build.py"
 
 [tool.ty]
 # All rules are enabled as "error" by default; no need to specify unless overriding.
