--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,15 @@
     "lint": "run-s lint:*",
     "lint:oxlint": "oxlint . --fix",
     "lint:eslint": "eslint . --fix --cache",
-    "format": "oxfmt src/"
+    "format": "oxfmt src/",
+    "generate:types": "json2ts -i ../src/ossiq/ui/renderers/export/schemas/export_schema_v1.0.json -o src/types/report.ts"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/d3": "^7.4.3",
+    "d3": "^7.9.0",
     "pinia": "^3.0.4",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
@@ -35,6 +40,7 @@
     "eslint-plugin-vue": "~10.7.0",
     "jiti": "^2.6.1",
     "jsdom": "^27.4.0",
+    "json-schema-to-typescript": "^15.0.4",
     "npm-run-all2": "^8.0.4",
     "oxfmt": "^0.27.0",
     "oxlint": "~1.42.0",
