chore: simplified few places for future use
During development noticed that few places has
some type dependencies not needed for the use case.
Removed and added FIXME suggestion for gap in
implementation.

GH-18

Signed-off-by: Maksym Klymyshyn <klymyshyn@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-# From https://github.com/github/gitignore/blob/main/Python.gitignore 2025-07-30
+# Claude
+.claudeignore
+.mcp.json
+.claude/
+
 ossiq_scan_report_*.html
+# From https://github.com/github/gitignore/blob/main/Python.gitignore 2025-07-30
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -11,6 +17,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+designs/
 build/
 develop-eggs/
 dist/
