--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .claudeignore
 .mcp.json
 .claude/
+CLAUDE.md
 
 ossiq_scan_report_*.html
 # From https://github.com/github/gitignore/blob/main/Python.gitignore 2025-07-30
